Cleanup legace proprietary code

--- a/01_INNO_URBA_SPACE_ALGOS_SIGHTLINES_POC.ipynb
+++ b/01_INNO_URBA_SPACE_ALGOS_SIGHTLINES_POC.ipynb
@@ -26,10 +26,8 @@
     "import math\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "import kinaxia.constants as constants\n",
     "import sklearn\n",
     "import prefect\n",
-    "import kinaxia.urbaspace.caches\n",
     "import gc\n",
     "import numpy as np\n",
     "import toml\n",
@@ -38,7 +36,6 @@
     "import geopandas as gpd\n",
     "import gc\n",
     "import seaborn as sns\n",
-    "import missingno as msno\n",
     "\n",
     "from rtree import index as rtree_index\n",
     "from shapely.ops import unary_union\n",
@@ -46,10 +43,17 @@
     "from prefect import Flow, Task\n",
     "from sklearn.cluster import DBSCAN\n",
     "from datetime import datetime as dt\n",
-    "from kinaxia.utils import ProgressBar\n",
     "from ipywidgets import HTML\n",
-    "from kinaxia.datasets.postgis import *\n",
-    "from kinaxia.geometry import *"
+    "\n",
+    "\n",
+    "## Kinaxia closed-source libraries\n",
+    "\n",
+    "# from kinaxia.utils import ProgressBar\n",
+    "# import kinaxia.urbaspace.caches\n",
+    "# from kinaxia.datasets.postgis import *\n",
+    "# from kinaxia.geometry import *\n",
+    "# import kinaxia.constants as constants\n",
+    "# from kinaxia.urbaspace.sightlines import *"
    ]
   },
   {
