Replace function shapely_geometry_make_line_2D

--- a/01_INNO_URBA_SPACE_ALGOS_SIGHTLINES_POC.ipynb
+++ b/01_INNO_URBA_SPACE_ALGOS_SIGHTLINES_POC.ipynb
@@ -169,11 +169,29 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "f087b20a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def convert_2D_line(geometry):\n",
+    "    if geometry.is_empty:\n",
+    "        return geometry\n",
+    "    if not isinstance(geometry,LineString):\n",
+    "        raise Exception(f'Only support simple LineString ({type(geometry)})')\n",
+    "    else:\n",
+    "        print('Geometry is LineString, skipping')\n",
+    "        return geometry\n",
+    "    return LineString([x[0:2] for x in list(geometry.coords)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "moral-filling",
    "metadata": {},
    "outputs": [],
    "source": [
-    "gdf_streets['geometry'] = gdf_streets['geometry'].apply(shapely_geometry_make_line_2D)   "
+    "gdf_streets['geometry'] = gdf_streets['geometry'].apply(convert_2D_line)"
    ]
   },
   {
